<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ball_tracker</name>
  <version>0.0.0</version>
  <description>Program to track a moving ball</description>
  <maintainer email="samuelproulx26@gmail.com">samuel</maintainer>
  <license>GPL-v3</license>

  <depend>rclpy</depend>
  <depend>cv2</depend>
  <depend>example_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
